# sot-cli

./: ARCHITECTURE.md  README.md  ROADMAP.md  SoT_Method.md  pyproject.toml  sot.example.toml  sot.keys.example.toml
sot_cli/: cli.py  constants.py  hyper_compress.py  mcp_client.py  message_builder.py  prompting.py  query.py  runtime.py  session_store.py  sot.py  sot_updater.py  spinners.py
sot_cli/config/: app.py  prompts.py
sot_cli/providers/: base.py  bedrock_converse.py  factory.py  openai_compat.py
sot_cli/tools/: registry.py  schemas.py
sot_cli/tools/browser/: browse.py  profiles.py
sot_cli/tools/editor/: apply_edits.py
sot_cli/tools/fs/: list_dir.py
sot_cli/tools/reader/: image.py  media.py  notebook.py  pdf.py
sot_cli/tools/session/: control.py  delegate.py
sot_cli/tools/shell/: run_command.py
sot_cli/tools/utils/: validators.py
